Started footer, need to fix spacing and such

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+
+
+  border-radius: 10px;
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.5), 0px 2px 16px 0px rgba(0, 0, 0, 0.5);
+  
 }
 
 /* Style the links inside the navigation bar */
@@ -68,6 +74,7 @@
     font-family: "Roboto";
     font-weight: bolder;
     font-size: 125px;
+       
     
 }
 
@@ -94,23 +101,32 @@
 
   
   color: #fdfbd4;
-  text-shadow: 3px 3px 4px #000000;
+  text-shadow: 2.5px 2.5px 4px #000000;
   font-family: "Roboto";
   font-weight: bolder;
   font-size: 40px;
   text-align: center;
+  
+  padding: 2.5%;
+  border-radius: 10px;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.5), 0px 4px 16px 0px rgba(0, 0, 0, 0.5);
 }
 
 #Projects {
   display: flex;
   justify-content: space-around; 
   flex-wrap: wrap;
+  
+
 }
 
 .project_div {
+  text-shadow: 2.5px 2.5px 4px #000000;
+
   width: 47.5%;           
   min-width: 300px; 
-  margin-top: -45px;
+  margin-top: 0px;
   margin-right: -50px;
   margin-left: -50px;
   color: #fdfbd4;
@@ -118,33 +134,64 @@
   font-size: 45px;
   border-radius: 10px;
   box-sizing: border-box;
+
+  border-radius: 10px;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.5), 0px 4px 16px 0px rgba(0, 0, 0, 0.5);
   
 }
 
 #Project_p{
+
   color: #fdfbd4;
   font-family: "Roboto";
   font-size: 17.5px;
 
   padding: 20px;
+  /*
   border-radius: 10px;
-  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.5), 0px 4px 16px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.5), 0px 4px 16px 0px rgba(0, 0, 0, 0.5);
+  */
 }
 
 .project_h6{
   margin-bottom: 5px;
+
   padding: 25px;
+  padding-top: 10px;
+  /*
   border-radius: 10px;
-  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.5), 0px 4px 16px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.5), 0px 4px 16px 0px rgba(0, 0, 0, 0.5);
+  */
 }
 
+#footer{
+  color: #fdfbd4;
+}
+
+.footer_div{
+  display: flex;
+  margin-left: 300px;
+  margin-right: 300px;
+}
+
+.Linked_footer{
+  margin: auto;
+  text-align: center;
+}
+
+.Email_footer{
+  margin: auto;
+  text-align: center;
+}
 
 /* About Me section */
 
 #about_me_div{
   margin-top: 50px;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 5%;
   text-align: center;
   font-family: "Roboto";
   font-size: 200%;
@@ -153,16 +200,11 @@
   color: #fdfbd4;
 
   border-radius: 10px;
-  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.5), 0px 4px 16px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.5), 0px 2px 8px 0px rgba(0, 0, 0, 0.5);
   padding-top: 2%;
   padding-bottom: 2%;
 }
 
-
-#about_me_h1{
-  font-size: 200%;
-  margin-top: -40px;
-}
 
 .about_me_p{
   text-align: left;
